--- a/game/game.css
+++ b/game/game.css
@@ -20,3 +20,11 @@ div#world {
     height: 20px;
     width: 20px;
 }
+
+
+#rotate {
+    position: absolute;
+    right: 50px;
+    bottom: 20px;
+    height: 20px;
+}
